--- a/frond-video/src/app.css
+++ b/frond-video/src/app.css
@@ -1,18 +1,47 @@
+body {
+    background: rgb(18,21,88);
+    background: linear-gradient(90deg, rgba(18,21,88,1) 19%, rgba(16,26,62,1) 35%, rgba(8,9,30,1) 82%);
+    color: #ffffff;
+}
+
+.nav {
+    box-sizing: border-box;
+    width: 100%;
+    position: relative;
+}
+.nav-bg {
+    position: absolute;
+    width: 100%;
+    height: 200%;
+    top: -10px;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.1);
+    z-index: -2;
+}
 
 .nav__item {
-    margin: 10px;
-    padding: 10px;
-    background-color: #411530;
+    padding: 10px 35px;
+    background-color: transparent;
     color: #fff;
     font-size: 20px;
     text-decoration: none;
-
+    border-bottom: 10px solid;
+    border-image-slice: 1;
+    border-width: 5px;
+    border-color: transparent;
+    z-index: 2;
 }
 .nav__item:hover {
-    text-decoration: underline;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.active {
+    border-image-source: linear-gradient(90deg, rgba(177,90,199,1) 24%, rgba(209,88,153,1) 47%, rgba(226,108,140,1) 66%, rgba(243,163,152,1) 89%);
 }
 
 .main {
+    width: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
 }
@@ -54,10 +83,19 @@
     margin: 10px;
 }
 
+.box-player {
+    display: flex;
+    height: auto;
+    justify-content: center;
+    padding-top: 20px;
+    box-sizing: border-box;
+}
+
 .player-wrapper {
     width: 100%;
+    height: auto;
     position: relative;
-    padding-top: 56.25%;
+    padding-top: 56%;
 }
 
 .react-player {
@@ -81,6 +119,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
 
